--- a/.github/workflows/ie-bank-backend.yml
+++ b/.github/workflows/ie-bank-backend.yml
@@ -1,72 +1,52 @@
-name: ie-bank-backend
+name: ie-bank-backend-dev
 
 on:
   push:
-    branches: [ "dev" ]
-  pull_request:
-    branches: [ "main" ]
+    branches-ignore:
+      - main
   workflow_dispatch:
 
-permissions:
-  contents: read
-  id-token: write
-
 env:
-  BACKEND_WEBAPP_DEV: larbibenamour-be-dev # update with my name
+  BACKEND_WEBAPP_DEV: larbibenamour-be-dev
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      ENV: ghci
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.11"
-    - name: Upgrade pip
-      run: |
-        python -m pip install --upgrade pip
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
-    - name: Lint with flake8
-      run: |
-        pip install flake8 pytest
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        python -m pytest --cov=iebank_api -v
-    - name: Upload artifact for deployment jobs
-      uses: actions/upload-artifact@v4
-      with:
-        name: python-app
-        path: .
+      - uses: actions/checkout@v3
 
-  deploy:
+      # Set up Python
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.11'
+
+      # Install dependencies
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      # Run Tests
+      - name: Run tests
+        run: |
+          python -m pytest --cov=iebank_api
+
+  deploy-dev:
     runs-on: ubuntu-latest
     needs: build
     environment:
       name: 'Development'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-    - name: Download artifact from build job
-      uses: actions/download-artifact@v4
-      with:
-        name: python-app
-        path: .
-    
-    - uses: azure/login@v2
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - uses: actions/checkout@v3
+      - uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: 'Deploy to Azure Web App'
-      uses: azure/webapps-deploy@v2
-      id: deploy-to-webapp
-      with:
-        app-name: ${{ env.BACKEND_WEBAPP_DEV }}
-        package: .
+      # Deploy to Azure Web App
+      - name: 'Deploy to Azure Web App'
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.BACKEND_WEBAPP_DEV }}
+          package: .
